feat: added slug to post backend
